--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-summary/category-summary.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-summary/category-summary.component.html
@@ -5,7 +5,7 @@
     </section>
     <section [ngClass]="{'content' : category,'content-hide-nav' : !category}" class="mainContentSection">
       <div class="col-md col-ms col-lg" style="width:98%; display: inline-block;">
-        <detector-command-bar (openPanel)="setFocusOnCallpsibleButton()"></detector-command-bar>
+        <detector-command-bar [disableGenie]="disableGenie"></detector-command-bar>
         <router-outlet></router-outlet>
       </div>
       <div id="collapse-genie-button button-container" class="col-md col-sm col-lg" class="collapsible-button"
