--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/detector-command-bar/detector-command-bar.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/detector-command-bar/detector-command-bar.component.html
@@ -4,7 +4,7 @@
       <render>
         <ng-template let-item="item">
           <div style="padding-top:1px!important;">
-            <fabric-search-results></fabric-search-results>
+            <fabric-search-results (disableGenie)="disableGenie"></fabric-search-results>
           </div>
         </ng-template>
       </render>
@@ -15,7 +15,7 @@
       </render-icon>
 
     </fab-command-bar-item>
-    <fab-command-bar-item key="askGenie" text="Ask Genie" [iconProps]="{ iconName: 'ChatInviteFriend' }"
+    <fab-command-bar-item *ngIf="disableGenie==false" key="askGenie" text="Ask Genie" [iconProps]="{ iconName: 'ChatInviteFriend' }"
       (click)="toggleOpenState()" data-track-type="run"></fab-command-bar-item>
     <fab-command-bar-item key="refresh1" text="Refresh" [iconProps]="{ iconName: 'Refresh' }" (click)="refreshPage()">
     </fab-command-bar-item>
