Enable editing experience

--- a/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
+++ b/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
@@ -52,7 +52,7 @@
           <img src="assets/img/applens-skeleton/main/recent_resources.svg" alt="recent resources" class="mr-3">
           <h3>Recent Resources</h3>
         </div>
-        <table style="width: 100%;">
+        <table style="width: 100%;margin-top: 10px;">
           <thead>
             <tr style="border-bottom: 1px solid #EDEBE9;">
               <th>Name</th>
