Fixed title position in dashboard
Update title style

--- a/AngularApp/projects/applens/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -39,10 +39,10 @@
   <div class="dashboard-content">
     <comm-alert></comm-alert>
     <l2-side-nav></l2-side-nav>
-    <div *ngIf="showTitle" style="font-size: 24px;font-weight: 600;">
+    <div *ngIf="showTitle" class="dashboard-title">
       {{getTitle()}}
     </div>
-    <div [class.content-with-side-nav]="showL2SideNav">
+    <div [class.content-with-side-nav]="showL2SideNav" style="padding: 0px 20px;">
       <router-outlet></router-outlet>
     </div>
   </div>
