--- a/AngularApp/projects/app-service-diagnostics/src/styles/global.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/styles/global.scss
@@ -788,3 +788,19 @@ hr {
     font-size: 13px;
     color: #323130;
 }
+
+#app-root[theme=dark]{
+    .blade-title {
+        font-family: 'Segoe UI';
+        font-size: 16px;
+        font-weight: 600;
+        color: white;
+    }
+
+    .blade-description {
+        font-family: 'Segoe UI';
+        font-weight: 400;
+        font-size: 13px;
+        color: white;
+    }
+}
