--- a/AngularApp/projects/app-service-diagnostics/src/styles.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/styles.scss
@@ -1,5 +1,20 @@
 
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+
+body {
+    background-color: var(--bodyBackground)!important;
+  }
+
+  html,
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: "PT Sans", sans-serif;
+    background-color: var(--bodyBackground)!important;
+  }
+
+
 .ngx-datatable.bootstrap {
     border: 1px solid #dddddd;
 }
