Add more css vars

--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-feedback/fabric-feedback.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-feedback/fabric-feedback.component.scss
@@ -31,6 +31,7 @@ $panel-padding-right: 20px;
     border: 1px solid black;
     padding: 3px;
     font-size: 12px;
+    color: var(--bodyText);
 }
 
 .panel-close :hover {
@@ -40,7 +41,7 @@ $panel-padding-right: 20px;
 .panel-close {
     position: absolute;
     top:10px;right:10px;
-    height: 35px; 
+    height: 35px;
     width: 35px;
 }
 
@@ -49,27 +50,10 @@ $panel-padding-right: 20px;
     line-height: 16px;
 }
 
-.feedback-panel-header {
-    position: absolute; 
-    left: $panel-padding-left; 
-    right: $panel-padding-right; 
-    height: 32px;
-}
-
-.feedback-panel-header > h3 {
-    font-size: 24px; 
-    line-height: 32px; 
-    font-weight: 600;
-}
-
-.feedback-panel-header > p {
-    color: #605E5C;
-}
-
 .feedback-panel-icons {
-    margin-top: 5px; 
+    margin-top: 5px;
     margin-bottom: 5px;
-    display: flex; 
+    display: flex;
     font-size: 25px;
 }
 
