--- a/AngularApp/projects/app-service-diagnostics/src/styles.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/styles.scss
@@ -149,7 +149,7 @@ fab-command-bar .ms-SearchBox {
     height: 34px;
 }
 .ms-CommandBar, .ms-Button--commandBar{
-    background-color: white!important;
+    background-color: var(--bodyBackground)!important;
 }
 
 .ms-Button--commandBar:hover {
@@ -167,6 +167,7 @@ fab-command-bar {
     border-bottom: 1px solid rgb(204, 204, 204)!important;
     font-size: 12px!important;
     height: 34px;
+    background-color: var(--bodyBackground)!important;
 }
 
 
@@ -174,6 +175,17 @@ fab-command-bar {
     height: 33px;
 }
 
+.ms-Fabric {
+    color: var(--bodyText);
+}
+
+.ms-Panel-content textarea {
+    background-color: var(--bodyBackground);
+    color: var(--bodyText);
+  }
 
 
+.ms-Panel-content textarea::placeholder{
+    color: var(--inputPlaceholderText);
+}
 
