--- a/AngularApp/projects/applens/src/app/collapsible-menu/components/collapsible-menu-item/collapsible-menu-item.component.scss
+++ b/AngularApp/projects/applens/src/app/collapsible-menu/components/collapsible-menu-item/collapsible-menu-item.component.scss
@@ -5,7 +5,7 @@
 .menu-item {
     cursor: pointer;
     font-family: az_ea_font,"Segoe UI",wf_segoe-ui_normal,"Segoe WP",Tahoma,Arial,sans-serif;
-    
+
 }
 
 .expand-icon {
@@ -16,27 +16,39 @@
 
 /* DARK THEME */
 
-:host-context(.dark-theme) .menu-item {
+.menu-item {
+    color:var(--bodyText);
+    padding: 5px 5px 5px 30px;
+    font-size: 14px;
+}
+
+.menu-item:hover,
+.menu-item.selected {
+    color:var(--bodyText);
+    background-color: var(--bodyBackground);
+}
+
+:host-context([theme=dark]) .menu-item {
     color:#e2e2e2;
     padding: 5px 5px 5px 30px;
     font-size: 14px;
 }
 
-:host-context(.dark-theme) .menu-item:hover,
-:host-context(.dark-theme) .menu-item.selected {
+:host-context([theme=dark]) .menu-item:hover,
+:host-context([theme=dark]) .menu-item.selected {
     color:#fff;
     background-color: #222222;
 }
 
 /* LIGHT THEME */
-:host-context(.light-theme) .menu-item {
+:host-context([theme=light]) .menu-item {
     color:#1d1d1d;
     font-size: 12px;
     padding: 10px 5px 9px 35px;
 }
 
-:host-context(.light-theme) .menu-item:hover,
-:host-context(.light-theme) .menu-item.selected {
+:host-context([theme=light]) .menu-item:hover,
+:host-context([theme=slight]) .menu-item.selected {
     background-color: rgba(0,137,250,.1);
 }
 
