--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/genie-panel/genie-panel.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/genie-panel/genie-panel.component.html
@@ -9,7 +9,7 @@
           tabindex="0" aria-label="App Service Diagnostics Genie">
           App Service Diagnostics: Genie</div>
         <div
-          style="color:#605E5C; position: absolute; left:25px; right: 32px; top:35px; height: 19px; font-family: 'segoe UI'; font-size: 10px; line-height: 14px; display: block"
+          class="genie-panel-description"
           tabindex="0" aria-label="An interactive self-serve diagnostics tool">
           An interactive self-serve diagnostics tool</div>
         <div style="position: absolute; top:10px; right: 10px; align-items: flex-end; cursor: pointer; "
