--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/genie-panel/genie-panel.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/genie-panel/genie-panel.component.scss
@@ -26,7 +26,7 @@
     position: absolute;
     width: 100%;
     height: 68px;
-    background: #F8F8F8;
+    background: var(--bodyBackground);
     /* Light Theme / Drop Shadow - Level 1 */
 
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
@@ -41,7 +41,7 @@
     height: 31px;
     border-radius: 15px;
     margin: 2%;
-    border: 1px gray!important;
+    border: 1px var(--inputBorder)!important;
     text-indent: 15px;
     padding-top: 5px;
     width: 80%;
@@ -64,4 +64,17 @@
 
 .search-box-icon:hover {
   color:#0272ca;
+}
+
+.genie-panel-description {
+    color:var(----labelText);
+    position: absolute;
+    left:25px;
+    right: 32px;
+    top:35px;
+    height: 19px;
+    font-family: 'segoe UI';
+    font-size: 10px;
+    line-height: 14px;
+    display: block
 }
