--- a/AngularApp/projects/applens/src/styles.scss
+++ b/AngularApp/projects/applens/src/styles.scss
@@ -190,6 +190,7 @@ fab-command-bar .ms-SearchBox {
   border-bottom: 1px solid rgb(204, 204, 204)!important;
   font-size: 12px!important;
   height: 34px;
+  background-color: var(--bodyBackground)!important;
 }
 
 
