--- a/AngularApp/projects/diagnostic-data/src/lib/components/summary-cards/summary-cards.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/summary-cards/summary-cards.component.scss
@@ -1,6 +1,6 @@
 .card-container {
-    background: #ffffff;
-    border: 1px solid rgba(204, 204, 204, 0.5);
+    background: var(--bodyBackground);
+    border: 1px solid var(--inputBorder);
     box-sizing: border-box;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 2px;
@@ -47,6 +47,7 @@
     font-size: 13px;
     line-height: 15px;
     margin: 3px;
+    color: var(--bodyText);
 }
 
 .card-message{
@@ -54,6 +55,7 @@
     line-height: 23px;
     margin: 5px 3px;
     font-weight: 600;
+    color: var(--bodyText);
 }
 
 .card-icon {
