--- a/AngularApp/projects/applens/src/app/modules/dashboard/resource-home/resource-home.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/resource-home/resource-home.component.html
@@ -9,6 +9,7 @@
 </div>
 <div class="outer-container">
   <div class="alert-container">
+    <applens-preview-banner></applens-preview-banner>
     <comm-alert></comm-alert>
   </div>
   <div class="btn-group" role="group" aria-label="Button Group">
