--- a/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-analysis/tab-analysis.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-analysis/tab-analysis.component.html
@@ -1,4 +1,5 @@
 <div style="margin-left:20px">
+  <applens-preview-banner></applens-preview-banner>
   <comm-alert></comm-alert>
   <detector-container [detector]="analysisId" [isAnalysisView]="true" (downTimeChanged)="onDowntimeChanged($event)" [downtimeZoomBehavior]="downtimeZoomBehavior"></detector-container>
 </div>
