--- a/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
+++ b/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid main-container">
   <div class="row main-row">
     <div class="col-md-6 col-md-offset-3">
+      <applens-preview-banner></applens-preview-banner>
       <div class="box box-primary">
         <div class="box-header with-border">
           <h3 class="box-title">Search Applens</h3>
         </div>
-
         <form #form="ngForm" (ngSubmit)="onSubmit(form.value)">
           <div class="form-group">
             <div class="form-row">
