Adding high contrast themes

--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/callstack-panel/callstack-panel.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/callstack-panel/callstack-panel.component.html
@@ -1,5 +1,5 @@
 <fab-panel [isOpen]="globals.openCallStackPanel" [type]="type" [customWidth]="width" [isHiddenOnDismiss]="true"
-  [isLightDismiss]="true" [hasCloseButton]="true" [closeButtonAriaLabel]="'close'" (onDismissed)="dismissedHandler()">
+  [isLightDismiss]="true" [hasCloseButton]="true" [closeButtonAriaLabel]="'close'" (onDismiss)="dismissedHandler()">
 
   <div style="margin-bottom: 10px">
     <h2>Call Stack</h2>
