--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-feedback/fabric-feedback.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-feedback/fabric-feedback.component.html
@@ -1,6 +1,6 @@
 <div>
   <fab-panel [isOpen]="globals.openFeedback" [type]="type" [customWidth]="panelWidth" [isHiddenOnDismiss]="true"
-    [hasCloseButton]="true" [closeButtonAriaLabel]="'close'" (onDismiss)="dismissedFeedbackHandler()"
+    [hasCloseButton]="true" [closeButtonAriaLabel]="'close'" [isBlocking]="false" (onDismiss)="dismissedFeedbackHandler()"
     (onOpen)="onOpenFeedbackPanel()" [renderFooterContent]="feedbackFooter" [isFooterAtBottom]="true" [headerText]="'Feedback'" [isLightDismiss]="true" (onLightDismissClick)="dismissedFeedbackHandler()">
 
     <!-- Feedback Panel Content -->
@@ -21,8 +21,8 @@
   </fab-panel>
 
   <fab-panel [isOpen]="submitted" [isLightDismiss]="true" [type]="type" [customWidth]="panelWidth"
-    [isHiddenOnDismiss]="true" [hasCloseButton]="true" [closeButtonAriaLabel]="'close'" [styles]="submittedPanelStyles"
-    [isBlocking]="false" (onDismissed)="dismissedSubmittedHandler()" (onOpen)="onOpenSubmittedPanel()">
+    [isHiddenOnDismiss]="true" [hasCloseButton]="true" [isBlocking]="false" [closeButtonAriaLabel]="'close'" [styles]="submittedPanelStyles"
+    [isBlocking]="false" (onDismiss)="dismissedSubmittedHandler()" (onOpen)="onOpenSubmittedPanel()">
     <div class="submitted-panel-text panel-text">
       <div>
         <span class="fa fa-check-circle submitted-panel-icon"></span> Feedback sent!
