--- a/AngularApp/projects/diagnostic-data/src/lib/components/comm-alert/comm-alert.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/comm-alert/comm-alert.component.html
@@ -5,7 +5,7 @@
 </ng-container>
 
 <fab-panel [isOpen]="isAlertExpanded" [type]="type" [customWidth]="width" [isHiddenOnDismiss]="true" [styles]="panelStyles"
-  [isLightDismiss]="true" [hasCloseButton]="true" [closeButtonAriaLabel]="'close'">
+  [isLightDismiss]="true" [hasCloseButton]="true" [isBlocking]="false" [closeButtonAriaLabel]="'close'">
   <div>
     <div class="row">
       <div>
