--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-search-results/fabric-search-results.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-search-results/fabric-search-results.component.scss
@@ -90,7 +90,7 @@
 }
 
 .detail-list-style:hover {
-    background: #edebe9;
+    background: var(--listItemBackgroundHovered);
 }
 
 .remove-results-padding {
