--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/genie-panel/genie-panel.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/genie-panel/genie-panel.component.scss
@@ -41,7 +41,7 @@
     height: 31px;
     border-radius: 15px;
     margin: 2%;
-    border: 1px var(--inputBorder)!important;
+    border: 1px solid var(--inputBorder)!important;
     text-indent: 15px;
     padding-top: 5px;
     width: 80%;
